syntax = "proto3";

option csharp_namespace = "ZeafloServer.Proto.PhotoPosts";

import "PhotoPosts/Models.proto";

service PhotoPostsApi {
  rpc GetByIds(GetPhotoPostsByIdsRequest) returns (GetPhotoPostsByIdsResult);
}
